Some cleanup done while bringing new robot model.